<resources>
    <string name="app_name">CPongS</string>
    <string name="reset">Reset!</string>
    <string name="rocket_image">Rocket image</string>
    <string name="ball_image">Ball image</string>
    <string name="start">Start!</string>
    <string name="pingpongrackets">PingPongRackets</string>
    <string name="start_normal">start normal</string>
    <string name="start_gravity_mode">start gravity mode</string>
</resources>